--- a/conf/app.conf
+++ b/conf/app.conf
@@ -14,3 +14,4 @@ jwtkey = "perdanaservices"
 adminmail = "noreply@my-gpi.io"
 tokenprefix = "appraisal"
 coreapi = "http://localhost:9905/v1/"
+validateroleendpoint = "http://localhost:9905/v1/validate/user/role"
