--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,5 @@
 appname = performance
-httpport = 2253
-runmode = dev
+runmode = prod
 autorender = false
 copyrequestbody = true
 EnableDocs = true
@@ -13,5 +12,18 @@ databaseType = "mysql"
 jwtkey = "perdanaservices"
 adminmail = "noreply@my-gpi.io"
 tokenprefix = "appraisal"
+
+[dev]
+httpport = 2253
 coreapi = "http://localhost:9905/v1/"
 validateroleendpoint = "http://localhost:9905/v1/validate/user/role"
+
+[prod]
+httpport = 2254
+httpsport = 2253
+EnableHTTPS = true
+EnableHTTP = true
+HTTPSCertFile = "/etc/letsencrypt/live/my-gpitools.com/cert.pem"
+HTTPSKeyFile = "/etc/letsencrypt/live/my-gpitools.com/privkey.pem"
+coreapi = "http://my-gpitools.com:9905/v1/"
+validateroleendpoint = "http://my-gpitools.com:9905/v1/validate/user/role"
