--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
 appname = performance
-runmode = prod
+runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
@@ -17,6 +17,7 @@ tokenprefix = "appraisal"
 httpport = 2253
 coreapi = "http://localhost:9905/v1/"
 validateroleendpoint = "http://localhost:9905/v1/validate/user/role"
+mailtemplatepath = "./files/mail-templates/"
 
 [prod]
 httpport = 2254
@@ -25,5 +26,6 @@ EnableHTTPS = true
 EnableHTTP = true
 HTTPSCertFile = "/etc/letsencrypt/live/my-gpitools.com/cert.pem"
 HTTPSKeyFile = "/etc/letsencrypt/live/my-gpitools.com/privkey.pem"
+mailtemplatepath = "/root/go/src/pasregistration/files/mail-templates/"
 coreapi = "http://my-gpitools.com:9905/v1/"
 validateroleendpoint = "http://my-gpitools.com:9905/v1/validate/user/role"
