Trying to fix error verifying API in add team endpoint, I think i've fixed it

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -27,5 +27,5 @@ EnableHTTP = true
 HTTPSCertFile = "/etc/letsencrypt/live/my-gpitools.com/cert.pem"
 HTTPSKeyFile = "/etc/letsencrypt/live/my-gpitools.com/privkey.pem"
 mailtemplatepath = "/root/go/src/pasregistration/files/mail-templates/"
-coreapi = "http://my-gpitools.com:9905/v1/"
-validateroleendpoint = "http://my-gpitools.com:9905/v1/validate/user/role"
+coreapi = "https://my-gpitools.com:9905/v1/"
+validateroleendpoint = "https://my-gpitools.com:9905/v1/validate/user/role"
