After adding strategic objectives

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -24,7 +24,7 @@ httpport = 2254
 httpsport = 2253
 EnableHTTPS = true
 EnableHTTP = true
-HTTPSCertFile = "/etc/letsencrypt/live/my-gpitools.com-0001/cert.pem"
+HTTPSCertFile = "/etc/letsencrypt/live/my-gpitools.com-0001/fullchain.pem"
 HTTPSKeyFile = "/etc/letsencrypt/live/my-gpitools.com-0001/privkey.pem"
 mailtemplatepath = "/root/go/src/pasregistration/files/mail-templates/"
 coreapi = "https://my-gpitools.com:9905/v1/"
