Fixing Ivalid Team ID bug

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,6 +9,8 @@ databaseUsername = "ssd"
 databasePassword = "ssd"
 databaseName = "pass"
 databaseType = "mysql"
+olddatabaseName = "pas"
+newdatabaseName = "perform"
 jwtkey = "perdanaservices"
 adminmail = "noreply@my-gpi.io"
 tokenprefix = "appraisal"
