--- a/conf/app.conf
+++ b/conf/app.conf
@@ -6,7 +6,7 @@ EnableDocs = true
 sqlconn = 
 databaseHost = "localhost"
 databaseUsername = "ssd"
-databasePassword = "ssd"
+databasePassword = "gpiTechSSD1_"
 databaseName = "pass"
 databaseType = "mysql"
 olddatabaseName = "pas"
@@ -26,8 +26,8 @@ httpport = 2254
 httpsport = 2253
 EnableHTTPS = true
 EnableHTTP = true
-HTTPSCertFile = "/etc/letsencrypt/live/my-gpitools.com-0001/fullchain.pem"
-HTTPSKeyFile = "/etc/letsencrypt/live/my-gpitools.com-0001/privkey.pem"
-mailtemplatepath = "/root/go/src/pasregistration/files/mail-templates/"
+HTTPSCertFile = "/etc/letsencrypt/live/my-gpitools.com/fullchain.pem"
+HTTPSKeyFile =  "/etc/letsencrypt/live/my-gpitools.com/privkey.pem"
+mailtemplatepath = "/home/appinstall/go/src/pasregistration/files/mail-templates/"
 coreapi = "https://my-gpitools.com:9905/v1/"
 validateroleendpoint = "https://my-gpitools.com:9905/v1/validate/user/role"
