--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
 appname = performance
-runmode = prod
+runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
@@ -26,8 +26,8 @@ httpport = 2254
 httpsport = 2253
 EnableHTTPS = true
 EnableHTTP = true
-HTTPSCertFile = "/etc/letsencrypt/live/my-gpitools.com/fullchain.pem"
-HTTPSKeyFile =  "/etc/letsencrypt/live/my-gpitools.com/privkey.pem"
+HTTPSCertFile = "/etc/letsencrypt/live/concerto.my-gpi.io/fullchain.pem"
+HTTPSKeyFile =  "/etc/letsencrypt/live/concerto.my-gpi.io/privkey.pem"
 mailtemplatepath = "/home/appinstall/go/src/pasregistration/files/mail-templates/"
 coreapi = "https://my-gpitools.com:9905/v1/"
 validateroleendpoint = "https://my-gpitools.com:9905/v1/validate/user/role"
