Changed the config to reflect new IP

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -29,5 +29,5 @@ EnableHTTP = true
 HTTPSCertFile = "/etc/letsencrypt/live/concerto.my-gpi.io/fullchain.pem"
 HTTPSKeyFile =  "/etc/letsencrypt/live/concerto.my-gpi.io/privkey.pem"
 mailtemplatepath = "/home/appinstall/go/src/pasregistration/files/mail-templates/"
-coreapi = "https://my-gpitools.com:9905/v1/"
-validateroleendpoint = "https://my-gpitools.com:9905/v1/validate/user/role"
+coreapi = "https://appserver.my-gpi.com:9905/v1/"
+validateroleendpoint = "https://appserver.my-gpi.com:9905/v1/validate/user/role"
